[workspace]
members = [
    "support",
    "basic",
    "retro_presets",
    "subpixel",
    "resize",
    "shake",
    "mixed_layers",
    "pixel_cursor",
    "lab",
]
resolver = "3"

[workspace.dependencies]
bevy = { version = "0.18", features = ["serialize"] }
saddle-camera-pixel-camera = { path = ".." }

[workspace.lints.clippy]
too_many_arguments = "allow"
type_complexity = "allow"
nonstandard_macro_braces = "warn"
