[package]
name = "saddle-camera-pixel-camera-example-basic"
version = "0.1.0"
edition = "2024"
publish = false

[dependencies]
bevy = { workspace = true }
saddle-camera-pixel-camera = { workspace = true }
saddle-camera-pixel-camera-example-support = { path = "../support" }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[lints]
workspace = true
