[package]
name = "saddle-camera-pixel-camera-lab"
version = "0.1.0"
edition = "2024"
publish = false

[features]
default = ["brp"]
brp = ["dep:bevy_brp_extras"]
e2e = ["dep:saddle-bevy-e2e"]

[dependencies]
bevy = { version = "0.18", features = ["bevy_remote", "serialize"] }
bevy_brp_extras = { version = "0.19", optional = true }
saddle-bevy-e2e = { git = "https://github.com/julien-blanchon/saddle-bevy-e2e", features = ["json"], optional = true }
saddle-camera-pixel-camera = { workspace = true }
saddle-camera-pixel-camera-example-support = { path = "../support" }
saddle-pane = { git = "https://github.com/julien-blanchon/saddle-pane" }

[lints]
workspace = true
